# squeeze

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  go.mod  main.go  main_test.go  readme.md  squeeze  url.go  url_test.go
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
Formula/: squeeze.rb
squeeze/: Cargo.toml  cidr.rs  codetag.rs  color.rs  datetime.rs  email.rs  emoji.rs  env.rs  hash.rs  ip.rs  ipv6.rs  json.rs  jwt.rs  lib.rs  mac.rs  mirror.rs  path.rs  phone.rs  scanner.rs  semver.rs  uri.rs  uuid.rs
squeeze-cli/: Cargo.toml  main.rs
squeeze-cli/tests/: cli.rs
squeeze/tests/: fuzz.rs  integration.rs  multibyte.rs  uri.rs
squeeze/tests/fixtures/: readme.md  uri-hacker-malware-websites.txt
src/: lib.rs  main.rs
src/squeeze/: Cargo.toml  codetag.rs  lib.rs  mirror.rs  uri.rs
src/squeeze-cli/: Cargo.toml  main.rs
src/squeeze/tests/: uri.rs
tests/: uri.rs
