[package]
name = "squeeze-cli"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2021"

[[bin]]
name = "squeeze"
path = "main.rs"

[dependencies]
clap = { version = "3.0.0-rc.0", features = ["derive"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
squeeze = { path = "../squeeze" }
