[package]
name = "squeeze-cli"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "CLI tool to extract rich information from any text"
repository = "https://github.com/aymericbeaumet/squeeze"

[[bin]]
name = "squeeze"
path = "main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
open = "5"
squeeze = { path = "../squeeze" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
