[package]
name = "squeeze"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2021"

[lib]
name = "squeeze"
path = "lib.rs"

[dependencies]
lazy_static = "1.4.0"
phf = { version = "0.10.0", features = ["macros"] }
regex = "1.5.4"
regex-syntax = "0.6.25"

[dev-dependencies]
glob = "0.3.0"
