[package]
name = "squeeze"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "Extract rich information from any text (URIs, codetags, etc.)"
repository = "https://github.com/aymericbeaumet/squeeze"
readme = "../readme.md"
keywords = ["uri", "url", "parser", "extractor", "codetag"]
categories = ["text-processing", "parsing", "command-line-utilities"]

[lib]
name = "squeeze"
path = "lib.rs"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
regex = "1.11"
regex-syntax = "0.8"

[dev-dependencies]
glob = "0.3"
